// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Should render Hero Heading with h1 1`] = `
<div>
  <h1
    class="font-ubuntu text-core-900 font-core-bold leading-core-auto space-y-core-paragraphSpacing-900 text-core-solid-slate-1400"
  >
    Hero heading
  </h1>
</div>
`;

exports[`Heading Should render h1 Heading with h1 1`] = `
<div>
  <h1
    class="font-ubuntu text-core-800 font-core-bold leading-core-auto space-y-core-paragraphSpacing-800 text-core-solid-slate-1400"
  >
    h1 heading
  </h1>
</div>
`;

exports[`Heading Should render h2 Heading with h2 1`] = `
<div>
  <h2
    class="font-ubuntu text-core-700 font-core-bold leading-core-auto space-y-core-paragraphSpacing-700 text-core-solid-slate-1400"
  >
    h2 heading
  </h2>
</div>
`;

exports[`Heading Should render h3 Heading with h3 1`] = `
<div>
  <h3
    class="font-ubuntu text-core-500 font-core-bold leading-core-auto space-y-core-paragraphSpacing-500 text-core-solid-slate-1400"
  >
    h3 heading
  </h3>
</div>
`;

exports[`Heading Should render h4 Heading with h4 1`] = `
<div>
  <h4
    class="font-ubuntu text-core-400 font-core-bold leading-core-auto space-y-core-paragraphSpacing-400 text-core-solid-slate-1400"
  >
    h4 heading
  </h4>
</div>
`;

exports[`Heading Should render h5 Heading with h5 1`] = `
<div>
  <h5
    class="font-ubuntu text-core-300 font-core-bold leading-core-auto space-y-core-paragraphSpacing-300 text-core-solid-slate-1400"
  >
    h5 heading
  </h5>
</div>
`;

exports[`Heading Should render h6 Heading with h6 1`] = `
<div>
  <h6
    class="font-ubuntu text-core-100 font-core-bold leading-core-auto space-y-core-paragraphSpacing-100 text-core-solid-slate-1400"
  >
    h6 heading
  </h6>
</div>
`;

exports[`Heading Should render h7 Heading with h7 1`] = `
<div>
  <h6
    class="font-ubuntu text-core-75 font-core-bold leading-core-auto space-y-core-paragraphSpacing-75 text-core-solid-slate-1400"
  >
    h7 heading
  </h6>
</div>
`;

exports[`Text Should display correct content 1`] = `
<div>
  <p
    class="font-ibmPlex-sans text-core-100 space-y-100 leading-core-300 font-core-regular"
  >
    Text content
  </p>
</div>
`;
